# agentic-plan-cache

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
apc/: __init__.py  agent.py  baseline.py  models.py  prompts.py
apc/cache/: __init__.py  plan_cache.py
apc/components/: __init__.py  actor.py  keyword_extractor.py  planner.py  template_adapter.py  template_extractor.py
apc/llm/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
apc/tools/: __init__.py  base.py  calculator.py  registry.py  web_search.py
demo/: benchmark.py  cost_benchmark.py  math_demo.py  multistep_benchmark.py
tests/: conftest.py  test_agent.py
